kubernetes/arctic-kaelte-homepage/00-middlewares.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: default
  name: arctic-redirect-www
spec:
  redirectRegex:
    regex: ^https?://www\.arctic-kaelte\.ch/(.*)
    replacement: https://arctic-kaelte.ch/$1
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: default
  name: arctic-security-headers
spec:
  headers:
    stsSeconds: 31536000
    contentTypeNosniff: true
    frameDeny: true
